# dahastes

./: BUILDME.md  LICENSE  cabal.project  dahastes.cabal  flake.nix  hie.yaml
.github/workflows/: CI.yaml
app/: Main.hs
src/: Lib.hs
test/: Spec.hs
